# MANA_PE

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  PE_structs.h  checked.h  core.h  imports.cpp  imports.h  main.cpp  mana_pe.cpp  mana_pe.h  nt_values.cpp  nt_values.h  pe_dump.cpp  pe_dump.h  pe_utils.cpp  resources.cpp  resources.h  utf8.h  utils.h
